Bug #32922 Race condition in micro GCP, participant crash in GCP_PREPARE
Submitted: 3 Dec 2007 9:02 Modified: 15 Dec 2007 11:26
Reporter: Jonas Oreland
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:>= telco-6.2 OS:Any
Assigned to: Jonas Oreland Target Version:

[3 Dec 2007 9:02] Jonas Oreland
Description:
If participant dies during GCP_PREPARE
  master will send a GCP_PREPARE_CONF on it's behalf

If master self has not yet received GCP_PREPARE
  it will send CONF with incorrect GCI

How to repeat:
error 7200
[3 Dec 2007 9:44] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/39093

ChangeSet@1.2701, 2007-12-03 09:44:16+01:00, jonas@perch.ndb.mysql.com +4 -0
  ndb - bug#32922
    Fix race between GCP_PREPARE (to self) and NODE_FAILREP
    (micro GCP only)
[14 Dec 2007 18:10] Bugs System
Pushed into 6.0.5-alpha
[15 Dec 2007 11:26] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available version,
including the bug fix. More information about accessing the source trees is available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented in 6.0.5 changelog as:

        When using micro-GCPs, if a node failed while preparing for a
        global checkpoint, the master node would use the wrong GCI.
[7 Jan 2008 17:10] Jon Stephens
Also documented fix in 5.1.23-ndb-6.2.10 and 5.1.23-ndb-6.3.7 changelogs.