ndb - bug#32922   Fix race between GCP_PREPARE (to self) and NODE_FAILREP   (micro GCP only)