storage/ndb/src/kernel/blocks/dbdih/DbdihMain.cpp
@@ -202,8 +202,26 @@ void Dbdih::sendGCP_PREPARE(Signal* signal, Uint32 nodeId)
   req->nodeId = cownNodeId;
   req->gci_hi = Uint32(m_micro_gcp.m_master.m_new_gci >> 32);
   req->gci_lo = Uint32(m_micro_gcp.m_master.m_new_gci);
-  sendSignal(ref, GSN_GCP_PREPARE, signal, GCPPrepare::SignalLength, JBA);
-  
+
+  if (! (ERROR_INSERTED(7201) || ERROR_INSERTED(7202)))
+  {
+    sendSignal(ref, GSN_GCP_PREPARE, signal, GCPPrepare::SignalLength, JBA);
+  }
+  else if (ERROR_INSERTED(7201))
+  {
+    sendSignal(ref, GSN_GCP_PREPARE, signal, GCPPrepare::SignalLength, JBB);
+  } 
+  else if (ERROR_INSERTED(7202))
+  {
+    ndbrequire(nodeId == getOwnNodeId());
+    sendSignalWithDelay(ref, GSN_GCP_PREPARE, signal, 2000, 
+                        GCPPrepare::SignalLength);    
+  }
+  else
+  {
+    ndbrequire(false); // should be dead code #ifndef ERROR_INSERT
+  }
+
   ndbassert(m_micro_gcp.m_enabled || Uint32(m_micro_gcp.m_new_gci) == 0);
 }//Dbdih::sendGCP_PREPARE()
 
@@ -5106,8 +5124,8 @@ void Dbdih::checkGcpOutstanding(Signal* signal, Uint32 failedNodeId){
     jam();
     GCPPrepareConf* conf = (GCPPrepareConf*)signal->getDataPtrSend();
     conf->nodeId = failedNodeId;
-    conf->gci_hi = Uint32(m_micro_gcp.m_new_gci >> 32);
-    conf->gci_lo = Uint32(m_micro_gcp.m_new_gci);
+    conf->gci_hi = Uint32(m_micro_gcp.m_master.m_new_gci >> 32);
+    conf->gci_lo = Uint32(m_micro_gcp.m_master.m_new_gci);
     sendSignal(reference(), GSN_GCP_PREPARECONF, signal, 
                GCPPrepareConf::SignalLength, JBB);
   }//if
@@ -8154,6 +8172,39 @@ Dbdih::startGcpLab(Signal* signal, Uint32 aWaitTime)
                       signal, &c_GCP_PREPARE_Counter, &Dbdih::sendGCP_PREPARE);
     signal->theData[0] = 9999;
     sendSignalWithDelay(CMVMI_REF, GSN_NDB_TAMPER, signal, 1000, 1);
+    return;
+  }
+  else if (ERROR_INSERTED(7200))
+  {
+    c_GCP_PREPARE_Counter.clearWaitingFor();
+    NodeRecordPtr nodePtr;
+    nodePtr.i = cfirstAliveNode;
+    do {
+      jam();
+      ptrCheckGuard(nodePtr, MAX_NDB_NODES, nodeRecord);
+      c_GCP_PREPARE_Counter.setWaitingFor(nodePtr.i);
+      if (nodePtr.i != getOwnNodeId())
+      {
+        SET_ERROR_INSERT_VALUE(7201);
+        sendGCP_PREPARE(signal, nodePtr.i);
+      }
+      else
+      {
+        SET_ERROR_INSERT_VALUE(7202);
+        sendGCP_PREPARE(signal, nodePtr.i);
+      }
+      nodePtr.i = nodePtr.p->nextNode;
+    } while (nodePtr.i != RNIL);
+
+    NodeReceiverGroup rg(CMVMI, c_GCP_PREPARE_Counter);
+    rg.m_nodes.clear(getOwnNodeId());
+    Uint32 victim = rg.m_nodes.find(0);
+    
+    signal->theData[0] = 9999;
+    sendSignal(numberToRef(CMVMI, victim),
+	       GSN_NDB_TAMPER, signal, 1, JBA);
+
+    CLEAR_ERROR_INSERT_VALUE;
     return;
   }
 #endif
